Use <executions> instead of <profiles> in test phase of IT module