@@ -99,4 +99,36 @@
         </profile>
     </profiles>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire-plugin.version}</version>
+                <configuration>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>modulePath</id>
+                        <phase>test</phase>
+                        <configuration>
+                            <useModulePath>true</useModulePath>
+                            <!-- todo: Hack to deal with surefire deficiency -->
+                            <argLine>--add-modules=ALL-MODULE-PATH</argLine>
+                            <groups>modulePath</groups>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>classPath</id>
+                        <phase>test</phase>
+                        <configuration>
+                            <useModulePath>false</useModulePath>
+                            <groups>classPath</groups>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
